
Docs for some of the .c files.
----------------------------------------------------------------------
Fri Apr 11 17:10:15 2003                        Michael Jennings (mej)

Completed documentation of the memory management system.
----------------------------------------------------------------------
Mon Jun 16 20:43:43 2003                        Michael Jennings (mej)

Additional documentation.

Added support for versions containing "rc."
----------------------------------------------------------------------
Fri Jun 27 17:53:29 2003                        Michael Jennings (mej)

Starting in on the docs for the object system.  Yum.
----------------------------------------------------------------------
Tue Jul  1 15:50:57 2003                        Michael Jennings (mej)

Finished the type docs.  Still working on the object docs.
----------------------------------------------------------------------
Thu Jul  3 15:27:36 2003                        Michael Jennings (mej)

More object docs.
----------------------------------------------------------------------
Thu Jul  3 23:37:45 2003                        Michael Jennings (mej)

Forgot to fix these before committing. :(
----------------------------------------------------------------------
Wed Jul  9 19:49:39 2003                        Michael Jennings (mej)

Some minor rearranging.
----------------------------------------------------------------------
Thu Oct 30 16:03:29 2003                        Michael Jennings (mej)

Make SPIF_STR_STR() convenience macro *always* return a string, even
if the str object is NULL.
----------------------------------------------------------------------
Thu Oct 30 18:12:35 2003                        Michael Jennings (mej)

Added support for object "properties."  A property is a member
variable with corresponding get/set methods.

I'll probably flesh this out more as I use it more.
----------------------------------------------------------------------